--- a/assets/my-projects.css
+++ b/assets/my-projects.css
@@ -1,11 +1,15 @@
 html {
   --color-app-background: #ced2d1;
-  --color-app-text-invert: whitesmoke;
   --color-app-text: #000000de;
-  --color-app-text-muted: #00000099;
-  --color-app-bottom-background: #afb0aa;
-  --color-header: #6c6159;
+  --color-app-header: #6c6159;
   --color-app-link: #2f5c78;
+
+  --color-app-text-muted: #00000099;
+  --color-app-top-background: #efdcb7;
+
+  --rotate-xs: 10deg;
+  --rotate-sm: 5deg;
+  --rotate-md: 3deg;
 }
 
 html, body {
@@ -23,10 +27,12 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
-h2 {
-  color: var(--color-header);
+h1, h2, h3 {
+  font-family: Alice, serif;
+  color: var(--color-app-header);
 }
 
 ul {
@@ -51,17 +57,148 @@ a {
   color: var(--color-app-link);
 }
 
-/* Список проектов */
+/* Навигация  */
+
+.app-nav {
+  height: 9.5rem;
+  position: relative;
+  background-color: var(--color-app-top-background);
+}
+
+@media (min-width: 1200px) {
+  .app-nav {
+    height: 9rem;
+  }
+}
+
+.app-nav:after {
+  content: "";
+  position: absolute;
+  bottom: 3rem;
+  left: -1rem;
+  height: 7rem;
+  width: calc(100% + 2rem);
+  background: url(top-projects-border.png) no-repeat center 2rem;
+  transform: rotate(var(--rotate-xs));
+}
+
+@media (min-width: 640px) {
+  .app-nav:after {
+    transform: rotate(var(--rotate-sm));
+  }
+}
+
+@media (min-width: 960px) {
+  .app-nav:after {
+    transform: rotate(var(--rotate-md));
+  }
+}
+
+.app-nav__home {
+  position: absolute;
+  right: 1rem;
+  top: 0.75rem;
+  color: var(--color-app-link);
+  font-weight: bold;
+  z-index: 20;
+  display: block;
+}
+
+/* Содержание */
+
+.app-content {
+  position: relative;
+  background-color: var(--color-app-background);
+}
+
+.app-content:before {
+  content: "";
+  width: calc(100% + 2rem);
+  position: absolute;
+  left: -1rem;
+  top: -4rem;
+  height: 7rem;
+  box-shadow: 0px -20px 30px -20px #00000088;
+  display: block;
+  z-index: 2;
+  transform: rotate(var(--rotate-xs));
+  background-color: var(--color-app-background);
+}
+
+@media (min-width: 640px) {
+  .app-content:before {
+    transform: rotate(var(--rotate-sm));
+  }
+}
+
+@media (min-width: 960px) {
+  .app-content:before {
+    transform: rotate(var(--rotate-md));
+  }
+}
+
+/* Автор */
+
+.projects-author {
+  display: flex;
+  position: absolute;
+  left: 1rem;
+  top: -2rem;
+  z-index: 10;
+  color: var(--color-app-header);
+  line-height: 1.375;
+}
+
+@media (min-width: 960px) {
+  .projects-author {
+    top: -3rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .projects-author {
+    top: -3.5rem;
+  }
+}
+
+@media (min-width: 1400px) {
+  .projects-author {
+    top: -4rem;
+  }
+}
+
+.projects-author__avatar {
+  border-radius: 25%;
+  height: 4rem;
+  margin-right: 0.75rem;
+  opacity: 0.75;
+  box-shadow: 0px 0px 5px 0px #00000015;
+}
+
+/* Проекты */
 
 .projects {
   max-width: 1400px;
   padding: 0 7vw;
   box-sizing: border-box;
-  margin: 4rem auto 7rem auto;
+  margin: 7rem auto 7rem auto;
   list-style: none;
   display: flex;
   flex-flow: wrap;
-  justify-content: space-between;
+  justify-content: center;
+}
+
+@media (min-width: 960px) {
+  .projects {
+    margin-top: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .projects {
+    margin-top: 4rem;
+    justify-content: space-between;
+  }
 }
 
 .project {
@@ -75,10 +212,6 @@ a {
 }
 
 @media (max-width: 1200px) {
-  .projects {
-    justify-content: center;
-  }
-
   .project,
   .project.wide {
     width: 100%;
@@ -106,7 +239,15 @@ a {
 .project-media img {
   display: block;
   margin: 0 auto;
-  filter: sepia(0.25) opacity(0.875);
+  filter: sepia(0.25) opacity(0.75);
+}
+
+.project-icon {
+  font-size: 5rem;
+  display: block;
+  text-align: center;
+  margin: 0 auto;
+  line-height: 3rem;
 }
 
 .project[data-project-key="books"] .project-media img {
@@ -115,12 +256,12 @@ a {
 
 .project-title {
   margin: 0;
-  color: var(--color-header);
+  color: var(--color-app-header);
 }
 
 .project-subtitle {
   margin: 0;
-  color: var(--color-header);
+  color: var(--color-app-header);
 }
 
 .project-description ul li {
@@ -129,48 +270,11 @@ a {
 
 .projects-more {
   width: 100%;
-  box-sizing: border-box;
   max-width: 1400px;
+  box-sizing: border-box;
   padding: 0 7vw;
   margin: 0 auto;
   text-align: right;
-}
-
-/* Автор */
-
-.projects-author {
-  padding: 0.75rem 1rem;
-  margin: 0 auto;
-  display: flex;
-  width: 100%;
-  box-sizing: border-box;
-  color: inherit;
-  text-decoration: none;
-  line-height: 1rem;
-}
-
-.projects-author-avatar {
-  border-radius: 10%;
-  height: 3rem;
-  margin-right: 0.75rem;
-  opacity: 0.875;
-}
-
-.projects-author-info {
-  font-size: 0.75rem;
-  font-weight: normal;
-  margin: 0;
-}
-
-/* Шапка */
-
-.app-header {
-  padding: 1rem 4.5vw;
-  box-sizing: border-box;
-  width: 100%;
-  text-align: center;
-  margin: 0 auto;
-  margin-bottom: 1rem;
 }
 
 /* Подвал */
